--- a/src/style/_button.scss
+++ b/src/style/_button.scss
@@ -6,6 +6,18 @@
   font-size: $fontSize4;
   line-height: $fontSize4;
   border-radius: convertUnit(3);
+
+  &.btn-sm {
+    padding: convertUnit(10);
+    font-size: $fontSize5;
+    height: auto;
+  }
+
+  &:disabled {
+    background-color: $gray-color-dark;
+    border-color: $gray-color-dark;
+    opacity: 1;
+  }
 }
 
 // 自訂一個我們需要的按鈕顏色
