feat: add signup logic
 - modify agreement scrollEnd animation
 - add FormGroupInput unit
 - add email / word validator

--- a/src/style/_variables.scss
+++ b/src/style/_variables.scss
@@ -9,6 +9,7 @@ $dark-color: rgb(51,51,51);
 $gray-color-light: rgb(245,245,245);
 $gray-color-dark: rgb(126,126,126);
 $light-color: rgb(255,255,255);
+$error-color: rgb(211,63,57) !default;
 
 $html-font-size: 13px;
 $mobileSize: 768;
