feat: modify ui
 - modify update event
 - modify update success direct
 - modify android keyboard close handle
 - modify route permission while history go -1

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -190,7 +190,7 @@ h,
     background-color: $gray-color-light;
   }
   &__main {
-    margin-top: convertUnit(86);
+    padding-top: convertUnit(86);
     padding-bottom: convertUnit(30);
   }
   &__title {
